--- a/inventory/popup_count_drugs.css
+++ b/inventory/popup_count_drugs.css
@@ -7,7 +7,23 @@
     top: 0%;
     left: 0px;
     display: none;
+    overflow: hidden;
     flex-direction: column;
+}
+.popup_count_drugs_notice_div {
+    width: 120px;
+    text-align: center;
+    padding: 6px;
+    font-weight: 600;
+    background-color: #00b718;
+    color: #fff;
+    border-radius: 8px;
+    position: absolute;
+    z-index: 100000;
+    top: -40px;
+    transform: translateX(-50%) translateY(-50%);
+    left: 50%;
+    transition: top 0.4s ease-in;
 }
 .popup_count_drugs_container {
     position: relative;
@@ -22,6 +38,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
+    background-color: #939393;
 }
 
 .ppcd_video {
@@ -63,17 +80,16 @@
     z-index: 10;
 }
 .main_zone_target {
-    position: relative;
+    /* position: relative;
     width: 5%;
     height: 5%;
     border-radius: 4px;
     border: 2px solid rgba(255, 0, 0, 0.636);
-    z-index: 20;
+    z-index: 20; */
 }
 .ppcd_video_top,
 .ppcd_video_bottom {
     width: 100%;
-    height: 12.5%;
     background-color: rgb(44, 44, 44);
     display: flex;
     text-align: center;
@@ -84,6 +100,7 @@
     color: #cecece;
     position: relative;
     z-index: 9;
+    flex-grow: 1;
 }
 
 
@@ -96,18 +113,31 @@
     align-items: center;
 }
 .ppcd_pic_trigger {
-    padding: 4px 20px;
-    border-radius: 10px;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
     color: #000;
     background-color: #ffffff;
-    border: 1px solid #939393;
+    border: 4px solid #d0d0d0;
     text-align: center;
+    margin: auto;
+}
+.ppcd_training_trigger {
+    width: 80px;
+    padding: 4px;
+    text-align: center;
+    background-color: rgb(74, 194, 102);
+    color: #fff;
+    border-radius: 5px;
+    border: 2px solid #006d0f;
+    margin: auto;
 }
 .ppcd_pic_qty {
     text-align: center;
     color: #fff;
 }
 .ppcd_pic_drug_type {
+    margin-bottom: 12px;
     text-align: center;
     color: #fff;
 }
