--- a/inventory/popup_count_drugs.css
+++ b/inventory/popup_count_drugs.css
@@ -48,8 +48,7 @@
     top: 0;
     left: 0;
     position: absolute;
-    z-index: -1;
-    display: none;
+    z-index: 8;
 }
 .ppcd_canvas {
     width: 100%;
@@ -58,7 +57,8 @@
     top: 0;
     left: 0;
     position: absolute;
-    z-index: 8;
+    z-index: 7;
+    display: none;
 }
 .ppcd_result_container {
     width: 100%;
@@ -79,25 +79,12 @@
     align-items: center;
     z-index: 10;
 }
-.main_zone_target {
-    /* position: relative;
-    width: 5%;
-    height: 5%;
-    border-radius: 4px;
-    border: 2px solid rgba(255, 0, 0, 0.636);
-    z-index: 20; */
-}
+
 .ppcd_video_top,
 .ppcd_video_bottom {
     width: 100%;
     background-color: rgb(44, 44, 44);
     display: flex;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    font-size: 14px;
-    line-height: 20px;
-    color: #cecece;
     position: relative;
     z-index: 9;
     flex-grow: 1;
@@ -140,6 +127,7 @@
     margin-bottom: 12px;
     text-align: center;
     color: #fff;
+    display: none;
 }
 .ppcd_h_close_btn {
     position: absolute;
@@ -150,6 +138,27 @@
     right: 18px;
     opacity: 0.8;
     z-index: 20;
+}
+.ppcd_perf_btn {
+    height: 100%;
+    width: 80px;
+}
+.ppcd_video_bottom {
+    flex-direction: column;
+}
+.ppcd_perf_div {
+    position: absolute;
+    top: 2px;
+    left: 20px;
+}
+.ppcd_perf_time {
+    font-size: 14px;
+    color: #00ad17;
+    left: 20px;
+}
+
+.display_none {
+    display: none;
 }
 
 @media screen and (min-width: 550px) {
