--- a/inventory/popup_count_drugs.css
+++ b/inventory/popup_count_drugs.css
@@ -118,6 +118,9 @@
     border-radius: 5px;
     border: 2px solid #006d0f;
     margin: auto;
+    user-select: none; /* 防止文字被選取 */
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none;
 }
 .ppcd_pic_qty {
     text-align: center;
